# PatchPilot

./: README.md  client_test.sh  server.py  server_test.sh  setup_or_update_client.ps1  setup_or_update_client.sh  setup_or_update_server.sh
Patchpilot_server/: cargo.toml
patchpilot_client/: Cargo.toml
patchpilot_client/src/: action.rs  command.rs  commands.rs  device.rs  main.rs  patchpilot_updater.rs  remote_cmd.rs  self_update.rs  service.rs  system_info.rs
patchpilot_client_rust/: Cargo.toml
patchpilot_client_rust/src/: commands.rs  main.rs  patchpilot_updater.rs  self_update.rs  service.rs  system_info.rs  updater.rs
patchpilot_server/: Cargo.toml  devices.go  history.go  roles.go  settings.go  users_groups.go  utils.go
patchpilot_server/src/: action_ttl.rs  audit.rs  audit_log.rs  auth.rs  db.rs  main.rs  models.rs  pending_cleanup.rs  schema.rs  settings.rs  state.rs
patchpilot_server/src/db/: init.rs  logger.rs  mod.rs  pool.rs
patchpilot_server/src/routes/: actions.rs  auth.rs  devices.rs  history.rs  mod.rs  pages.rs  roles.rs  settings.rs  users_groups.rs
patchpilot_server/src/tasks/: action_ttl.rs  mod.rs  pending_cleanup.rs
pilot-agent/: Cargo.toml
pilot-agent/src/: command.rs  device.rs  logging.rs  patchpilot_updater.rs  remote_cmd.rs  self_update.rs  service.rs  system_info.rs
pilot-core/: actions.go  auth.go  db.go  devices.go  go.mod  history.go  main.go  models.go  roles.go  settings.go  updates.go  users_groups.go  utils.go
static/: app.js  styles.css
templates/: actions.hbs  actions.html  audit.hbs  audit.html  client.html  client_detail.html  dashboard.hbs  dashboard.html  device_detail.hbs  device_detail.html  devices.hbs  devices.html  history.hbs  history.html  login.hbs  login.html  navbar.hbs  navbar.html  roles.hbs  roles.html  settings.hbs  settings.html  users_groups.hbs  users_groups.html
