[package]
name = "rust_patch_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.104"
log = "0.4.19"
flexi_logger = "0.31.7"
anyhow = "1.0.64"
sysinfo = "0.37.2"
lazy_static = "1.4.0"
termcolor = "1.4.1"
local-ip-address = "0.6.5"
windows-service = { version = "0.8.0", optional = true }
chrono = "0.4"

[features]
default = []
windows = ["windows-service"]

[[bin]]
name = "rust_patch_client"
path = "src/main.rs"

[[bin]]
name = "patchpilot_updater"
path = "src/patchpilot_updater.rs"


