[package]
name = "rust_patch_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["blocking", "json"] }  # A simple HTTP client for making requests.
serde = { version = "1.0.228", features = ["derive"] }            # A framework for serializing and deserializing Rust data types.
serde_json = "1.0.145"                                           # A JSON serialization library for handling JSON data with Serde.
log = "0.4.28"                                                  # A logging framework for Rust applications, providing a facade for various logging implementations.
flexi_logger = "0.31.7"                                         # A flexible logging library for configurable logging behavior.
anyhow = "1.0.100"                                               # A simple way to handle errors in Rust, providing context and backtraces.
sysinfo = { version = "0.37.2", features = ["network", "disk"] } # A library for retrieving system information like processes and hardware details.
lazy_static = "1.5.0"                                          # A macro for defining lazy-initialized static variables.
termcolor = "1.4.1"                                           # A library for coloring terminal output, enhancing the aesthetics of command-line applications.
local-ip-address = "0.6.5"                                    # A utility for getting the local IP address of the machine.
windows-service = { version = "0.8.0", optional = true }      # A library for creating Windows services in Rust.
chrono = "0.4.42"                                                # A date and time library for handling dates, times, and durations in Rust.
tokio = { version = "1.48.0", features = ["macros", "rt-core", "time"] }             # async runtime for tokio

[features]
default = []
windows = ["windows-service"]

[[bin]]
name = "rust_patch_client"
path = "src/main.rs"

[[bin]]
name = "patchpilot_updater"
path = "src/patchpilot_updater.rs"
