[package]
name = "patchpilot_client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "rustls-tls", "stream", "blocking"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time", "process", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
log = "0.4.28"
flexi_logger = "0.31.7"
anyhow = "1.0.100"
sysinfo = { version = "0.37.2", features = ["network", "disk"] }
lazy_static = "1.5.0"
termcolor = "1.4.1"
local-ip-address = "0.6.5"
windows-service = { version = "0.8.0", optional = true }
chrono = "0.4.42"
nix = { version = "0.30.1", default-features = false, features = ["user"] }
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

[features]
default = []
windows = ["windows-service"]

[[bin]]
name = "patchpilot_client"
path = "src/main.rs"

[[bin]]
name = "patchpilot_updater"
path = "src/patchpilot_updater.rs"
