[package]
name = "rust_patch_client"
version = "0.1.0"

[dependencies]
windows-service = "^0.4"
reqwest = { version = "^0.11", features = ["blocking", "json"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
log = "^0.4"
simplelog = "^0.11"
anyhow = "^1.0"
sysinfo = { version = "^0.19", optional = true }  # Make sysinfo optional
lazy_static = "^1.4"

[features]
default = []
windows = ["windows-service"]
unix = ["sysinfo"]  # Include sysinfo in the unix feature

[[bin]]
name = "rust_patch_client"
path = "src/main.rs"

[[bin]]
name = "patchpilot_updater"
path = "src/patchpilot_updater.rs"
