[package]
name = "rust_patch_client"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-service = "^0.4", optional = true }
reqwest = "^0.12"
serde = "^1.0"
serde_json = "^1.0"
log = "^0.4"
simplelog = "^0.12"
anyhow = "^1.0"
sysinfo = { version = "^0.37", optional = true }
lazy_static = "^1.4"
termcolor = "^1.4"

[features]
default = []
windows = ["windows-service"]  # Include windows-service in the windows feature
unix = ["sysinfo"]  # Include sysinfo in the unix feature

[[bin]]
name = "rust_patch_client"
path = "src/main.rs"

[[bin]]
name = "patchpilot_updater"
path = "src/patchpilot_updater.rs"

